# public-muscle

./: README.md
PRETUS_Plugins/: CMakeLists.txt  README.md
PRETUS_Plugins/Plugin_RFSeg/: CMakeLists.txt  Plugin_RFSeg.cxx  Plugin_RFSeg.h  Widget_RFSeg.cxx  Widget_RFSeg.h  Worker_RFSeg.cxx  Worker_RFSeg.h  plugin_rfseg_config.h.in  pngutils.hxx
PRETUS_Plugins/Plugin_RFSeg/python_RFSeg/: RFSeg_worker.py  demo.py  requirements.txt  rfutils.py  unet.py
PRETUS_Plugins/Plugin_RFSeg/python_RFSeg/lib/: data_prep.py  extract_annotations_from_images.sh  metric.py  requiremnets-frame-extraction.txt  save_final_data.py  select_good_images.py  video_channel_measurement.py  video_to_images.py
PRETUS_Plugins/Plugin_RFSeg/python_RFSeg/model/: model_4l_Aug.pth  model_5l_AugPlus.pth
PRETUS_Plugins/Plugin_pixelSize/: CMakeLists.txt  Plugin_pixelSize.cxx  Plugin_pixelSize.h  README.md  Widget_pixelSize.cxx  Widget_pixelSize.h  Worker_pixelSize.cxx  Worker_pixelSize.h  plugin_pixelsize_config.h.in
